--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,29 @@
-**/.DS_Store
-**/.idea
 .DS_Store
 .idea
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Jupyter Notebook
 .ipynb_checkpoints
+
 # Environments
 .env
 .venv
